react-app/src/components/BusinessDetails/BusinessDetail.css
.business-detail-one {
  position: relative;
  height: 426px;

}

.business-detail-image {
  width: 100%;
  height: 426px;
  object-fit: cover;
}

.business-detail-image-text-container {
  width: 100%;
  max-width: 1144px;
  height: 426px;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  padding: 40px 64px;
  margin: 0 auto;
  box-sizing: border-box;
  display: flex;
  align-items: flex-end;
}

.business-detail-image-text-inner-container {
  height: 170.42px;
  font-family: 'Open Sans', sans-serif;
}

.business-detail-image-text-name {
  color: white;
  font-size: 48px;
  font-weight: 700;
  position: relative;
  top: 50px;
  text-shadow: black 3px 3px 3px;
}

.business-detail-image-text-review {
  color: white;
  font-size: 16px;
  font-weight: 600;
  position: relative;
  top: 50px;
  text-shadow: black 3px 3px 3px;
}

.business-detail-image-text-hours {
  display: flex;
  margin-top: 24px;
  font-size: 16px;
  text-shadow: black 2px 2px 2px;
  position: relative;
  top: 55px;
}

.business-detail-image-text-hours-open {

  color: white;
  font-size: 16px;
  font-weight: 600;
}

.business-detail-image-text-hours-time {
  color: white;
  font-size: 16px;
  font-weight: 600;
  margin-left: 8px;
}

.business-detail-two {
  font-family: 'Open Sans', sans-serif;
}

.business-detail-two-inner-container {
  width: 100%;
  max-width: 1144px;
  margin: 0 auto;
  padding: 40px;
  box-sizing: border-box;
  display: flex;
  justify-content: space-between;
}

.business-detail-two-left {
  width: 66.6666666%;
  box-sizing: border-box;
  padding-right: 16px;
}

.business-detail-two-left-button {
  margin-bottom: 32px;
}

.business-detail-two-left-menu-container {
  padding-top: 32px;
  padding-bottom: 32px;
  border-top: 1px solid #ebebeb;
  border-bottom: 1px solid #ebebeb;
}

.business-detail-two-left-menu {
  font-weight: 700;
  font-size: 20px;
}

.business-detail-two-left-popular {
  font-size: 16px;
  font-weight: 700;
  padding-top: 24px;
  margin-bottom: 16px;
  display: flex;
  justify-content: space-between;
}

.business-detail-view-menu-container {
  margin-right: 32px;
  display: flex;
  cursor: pointer;
}

.business-detail-view-menu {
  margin-right: 12px;
}

.business-detail-two-left-menuitems {
  display: flex;
  /* justify-content: center; */
  padding-bottom: 32px;
}

.business-detail-two-left-location-hours-container {
  padding-top: 32px;
  padding-bottom: 32px;
  border-bottom: 1px solid #ebebeb;
}

.business-detail-two-left-location-hours-header {
  font-size: 20px;
  font-weight: 700;
}

.business-detail-two-left-reviews-container {
  padding-top: 32px;
  padding-bottom: 32px;
}

.business-detail-two-left-reviews-header {
  font-size: 20px;
  font-weight: 700;
}

.business-detail-two-right {
  width: 33.3333333%;
  box-sizing: border-box;
  padding-left: 16px;
}

.business-detail-two-right-box {
  border: 1px solid #ebebeb;
  padding: 16px;
  border-radius: 4px;
}

.business-detail-two-right-box-website {
  padding-bottom: 16px;
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-right: 10px;
}

.business-detail-phone {
  padding-top: 16px;
  padding-bottom: 16px;
  padding-right: 10px;
  border-top: 1px solid #ebebeb;
  align-items: space-between;
  justify-content: space-between;
  display: flex;

}

.business-detail-two-right-box-direction {
  padding-top: 16px;
  padding-bottom: 16px;
  border-top: 1px solid #ebebeb;
  display: flex;
  justify-content: space-between;
}

.business-detail-two-right-box-direction-one {
  line-height: 24px;
  font-weight: 600;
}

.business-detail-two-right-box-direction-two {
  line-height: 24px;

}

.business-detail-direction{
  display: flex;
  align-items: center;
  padding-right: 10px;
}

.business-detail-description {
  border-radius: 5px;
  display: flex;
  flex-direction: column;
  padding-top: 16px;
  border-top: 1px solid #ebebeb;
}

.business-detail-edit-button {
  background-color: #ff0000;
  color: white;
  font-size: 16px;
  font-weight: 700;
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  position: relative;
  /* right: 5px; */
  /* bottom: 10px; */
}

.business-detail-delete-button {
  background-color: #ff0000;
  color: white;
  font-size: 16px;
  font-weight: 700;
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  position: relative;
  right: 5px;
  /* bottom: 10px; */
  margin-left: 12px;
}


.business-detail-review-button {
  background-color: #ff0000;
  color: white;
  font-size: 16px;
  font-weight: 700;
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
}

.reviews_header{
  font-size: 20px;
  font-weight: 700;
  display: flex;
  flex-direction: column;
  align-items: center;
  position: relative;
  right: 60px;
}

.submitButton{
  background-color: #ff0000;
  color: white;
  font-size: 16px;
  font-weight: 700;
  padding: 8px 16px;
  border-radius: 4px;
  border: none;
  cursor: pointer;
  position: relative;
  top: 5px;
  left: 200px;
}

